fixed sizing error when in phone mode, went too small, increase mediaquery size for tablets, re-worked side-nav bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ details {
     display: none;
 }
 
-@media screen and (min-width: 375px) and (max-width: 1024px) and (orientation: portrait) {
+@media screen and (min-width: 375px) and (max-width: 1337px) and (orientation: portrait)   {
     
 
 
@@ -69,22 +69,30 @@ details {
    
  }
 
+ #side-nav {
+    display: flex;
+    position: fixed;
+    top:2px;
+    left:2px;
+    padding: 0.5rem;
+    width: fit-content;
+    height: fit-content;
+    z-index: 1006;
+ }
 
 
 
 
-    details {
+   details {
         display: block;
         flex-direction: column;
-        top: 2px;
-        left: 1px;
         position: fixed;
         font-family: "alegreya-variablefont_wght-webfont", sans-serif;
-        background-color: rgba(126, 123, 123, 0.404);
-        padding: 0.5rem; 
-        font-size: 1.5rem;
-        border: 2px solid rgba(233, 173, 6, 0.918);
-        box-shadow: 0 0 2px 2px rgb(233, 172, 6);
+        background-color: rgba(126, 123, 123, 0.404); 
+        font-size: 1rem;
+        color: rgba(6, 10, 233, 0.8);
+        border: 1px solid rgba(6, 10, 233, 0.3);
+        box-shadow: 0 0 2px 2px rgba(6, 10, 233, 0.3);
         z-index: 1005;
 
     }
@@ -109,23 +117,20 @@ details {
 
     #nav-btn-container {
         display: flex;
-        position: fixed;
-        left: 1px;
-        top: 50px;
+        position: sticky;
         width: 8rem;
-        background-color: rgba(126, 123, 123, 0.404); 
-        border: 2px solid rgba(233, 173, 6, 0.918);
-        box-shadow: 0 0 2px 2px rgb(233, 172, 6);
-        align-items: center;
-        padding: 1.2rem;
+        left: 0;
+        padding: 1rem;
         gap: 1rem;
         justify-content: center;
         flex-direction: column;
-        z-index: 1000;
+        
     }
 
     #home-nav, #menu-nav, #about-nav {
         width: 6rem;
+        border: 2px solid rgba(67, 11, 223, 0.6);
+        color: rgba(67, 11, 223, 0.6);
     }
 
     #button-container > button {
@@ -263,7 +268,7 @@ button:hover {
     width: 100%;
     margin-top: 150px;
     height: auto;
-    padding: 3rem 10rem 10rem 10rem;
+    padding: 3rem 2rem 10rem 2rem;
     justify-content: center;
     align-items: center;
     background-color:rgba(126, 123, 123, 0.103);
@@ -378,7 +383,8 @@ button:hover {
 }
 
 
-@media screen and (min-width: 375px) and (max-width: 1024px) and (orientation: portrait) {
+@media screen and (min-width: 375px) and (max-width: 1337px) and (orientation: portrait) 
+ {
 
  .text-overlay.active, .card-wrapper  { 
     max-width: 16.6rem;
@@ -421,7 +427,7 @@ button:hover {
     justify-content: center;
     flex: 1 1 20rem;
     align-items: center;
-    padding: 2rem 10rem 10rem 10rem;
+    padding: 2rem 2rem 10rem 2rem;
     min-width: 12rem;
     flex-direction: column;
     align-items: center;
